--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.1.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.2.2"
+    "express-session": "^1.17.3",
+    "mongoose": "^7.2.2",
+    "neo4j-driver": "^5.9.2",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
